Fix nested CSS for custom scrollbar utility
Apply scrollbar styles directly to each scrollable element instead of relying on nested/inherited CSS, since scrollbar pseudo-elements are not inheritable.

Fixes #485

Ref: https://github.com/atcupps/Jupiterp/issues/485

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -3,57 +3,50 @@
 @tailwind utilities;
 
 body {
-    background-color: white;
     height: 100svh;
     font-family: 'Cabin', Arial, sans-serif;
-
-    /* ===== Scrollbar CSS ===== */
-    /* Firefox */
-    * {
-        scrollbar-width: auto;
-        scrollbar-color: #cccccc white;
-    }
-
-    /* Chrome, Edge, and Safari */
-    *::-webkit-scrollbar {
-        width: 8px;
-    }
-
-    *::-webkit-scrollbar-track {
-        background: white;
-    }
-
-    *::-webkit-scrollbar-thumb {
-        background-color: #cccccc;
-        border-radius: 8px;
-    }
-    
-    ::-webkit-scrollbar-corner {
-        background: rgba(0,0,0,0);
-    }
 }
 
-.dark body {
-    background-color: #151922;
+@layer utilities {
+    /* Please apply "custom-scrollbar" class for all scrollable elements 
+    (elements with classes of overflow-scroll pr overflow-auto) */
+    .custom-scrollbar {
+        scrollbar-width: auto;
+        scrollbar-color: #cccccc white;
 
-    /* ===== Scrollbar CSS ===== */
-    /* Firefox */
-    * {
+        &::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: white;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #cccccc;
+            border-radius: 8px;
+        }
+
+        &::-webkit-scrollbar-corner {
+            background: rgba(0, 0, 0, 0);
+        }
+    }
+
+    html.dark .custom-scrollbar {
         scrollbar-width: thin;
         scrollbar-color: #3F475A #151922;
-    }
 
-    /* Chrome, Edge, and Safari */
-    *::-webkit-scrollbar {
-        width: 4px;
-    }
+        &::-webkit-scrollbar {
+            width: 4px;
+        }
 
-    *::-webkit-scrollbar-track {
-        background: #151922;
-    }
+        &::-webkit-scrollbar-track {
+            background: #151922;
+        }
 
-    *::-webkit-scrollbar-thumb {
-        background-color: #3F475A;
-        border-radius: 8px;
+        &::-webkit-scrollbar-thumb {
+            background-color: #3F475A;
+            border-radius: 8px;
+        }
     }
 }
